2005-05-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpselectionoptions.c: added modifier keys to the
	tooltips of the selection mode buttons.

	* app/dialogs/preferences-dialog.c: removed the GUI for the
	"default-threshold" preference.

	* app/tools/gimpmagnifyoptions.c: removed the GUI for the
	Threshold option; it was more confusing than useful.

	* app/config/gimpguiconfig.c: changed the default value for
	"save-tool-options" to FALSE. This is a major source of confusion;
	let's try if disabling it is an improvement.

2005-05-07  Jay Cox  <jaycox@gimp.org>

	* plug-ins/common/psd.c: add comments describing thumbnail resource.

2005-05-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icoload.c
	* plug-ins/winicon/main.c: added a thumbnail loader for .ico files
	Fixes bug #158191.

2005-05-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icoload.[ch]
	* plug-ins/winicon/main.c: code cleanup, prepare for thumbnail
	loading.

2005-05-06  Sven Neumann  <sven@gimp.org>

	* app/actions/layers-actions.c
	* app/core/gimpimage.c (gimp_image_position_layer)
	* app/widgets/gimplayertreeview.c (gimp_layer_tree_view_drop_possible):
	drop the limitation that layers not at the bottom of the stack
	have to have an alpha channel. Allow the user to move the
	background layer up in the stack or reposition it using DND.

	* tips/gimp-tips.xml.in: changed the relevant tip and some more.

2005-05-06  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/compressor.c: use G_DIR_SEPARATOR instead of '/'.

	* plug-ins/common/mail.c: ditto. Fixed some coding style issues.
	Special case .bz2 files just as .gz ones.

2005-05-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-merge.c: removed redundant casts.

2005-05-06  Michael Natterer  <mitch@gimp.org>

	* app/actions/gradient-editor-commands.h: added enum for the
	"load_color" actions.

	* app/actions/gradient-editor-actions.c
	* app/actions/gradient-editor-commands.c: use the new enum instead